unpackaged/main/default/objects/API_Connector__Company_Report_Input_Setting__c/API_Connector__Company_Report_Input_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to store Company Report service information</description>
    <label>Company Report Input Setting</label>
</CustomObject>