unpackaged/main/default/objects/API_Connector__Company_Report_Input_Setting__c/fields/API_Connector__Product_ID__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Product_ID__c</fullName>
    <label>Product ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>